# PickGame

./: CMakeLists.txt  build.bat  readme.txt
FBXLoader/: CMakeLists.txt  FBXDataConsumer.cpp  FBXDataConsumer.h  FBXFileLoader.cpp  FBXFileLoader.h  Logger.cpp  Logger.h  StringConstIDs.h  StringIDs.h  main.cpp
Misc/: PickGame_ApplicationDesign.mdj
PickGame/: CMakeLists.txt  main.cpp
PickGame/GameBoardLayer/: Board.cpp  Board.h  BoardLine.cpp  BoardLine.h  GameBoard.cpp  GameBoard.h  GameRoundTask.cpp  GameRoundTask.h  GameRoundTaskCreate.cpp  GameRoundTaskCreater.h  GameRulesPolicy.h  GameRulesPolicyManager.cpp  GameRulesPolicyManager.h  GameRulesPolicyReader.cpp  GameRulesPolicyReader.h  PickObject.cpp  PickObject.h
PickGame/Include/: ModelFileLoader.h  datatypedef.h  enums.h
PickGame/Others/: Executer.h  GameManager.cpp  GameManager.h  IOManager.cpp  IOManager.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
PickGame/Plugins/TextureLoader/: DirectXHelpers.h  pch.h
PickGame/RenderLayer/Render/: FinalRender.cpp  FinalRender.h  RenderBase.cpp  RenderBase.h  RenderManager.cpp  RenderManager.h  RenderResource.cpp  RenderResource.h  RenderTargetSwapChain.cpp  RenderTargetSwapChain.h
PickGame/RenderLayer/Render Resources layer/: BoundingMath.h  BoundingMath.hpp  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CommandFence.cpp  CommandFence.h  DXGILayer.cpp  DXGILayer.h  DirectXObjectsLiveChecker.h  FrameResource.cpp  FrameResource.h  FrameResourceManager.cpp  FrameResourceManager.h  GPUCanvas.cpp  GPUCanvas.h  MaterialsHolder.cpp  MaterialsHolder.h  ModelFileConsumer.cpp  ModelFileConsumer.h  PGFFileLoader.cpp  PGFFileLoader.h  PSOManager.cpp  PSOManager.h  PSOObject.cpp  PSOObject.h  ResourceManager.cpp  ResourceManager.h  SceneBoardDataBuilder.cpp  SceneBoardDataBuilder.h  SceneDataBuilder.cpp  SceneDataBuilder.h  SceneEnvironment.cpp  SceneEnvironment.h  SceneEnvironmentLoader.cpp  SceneEnvironmentLoader.h  SceneEnvironmentManager.cpp  SceneEnvironmentManager.h  SceneObject.cpp  (+24 more)
PickGame/Resources/RulesPolicies/: Ice_RulesPolicies2  default_RulesPolicies
PickGame/Shaders/: FinalRender.hlsl  RootSignature.hlsl  commonPart.hlsl
PickGame/config/: Directory.Build.props  packages.config
cmake/: help.cmake
